# voicemode

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  substitutions.dif  voicemode.bat  voicemode.command  voicemode.sh
voiceapp/: audio.py  cli.py  settings.py  sounds.py  substitutions.py  transcribe.py  utils.py
voiceapp/assets/: __init__.py
